 # [#21813] [patch] Randomise the Joomla DB Prefix During Installation (Nicholas Dionysopoulos, Omar Ramos)
 # [#26151] Setting &template= in URL gives template parameters from default- or page-assigned template style (bill richardson, Stephen Brandon)
 # [#26281] duplication of rel attribute in atomic (Jacob Waisner, bill richardson)
 # [#26174] *Unused admin modules (Jean-Marie Simonet)

30-Jun-2011 Jean-Marie Simonet
 # [#26285] Update Joomla! CMS Version. Thanks Michael.
 
-------------------- 1.7.0 Beta1 Release [28-Jun-2011] ------------------

28-Jun-2011 Mark Dexter
 ^ [#23125] "Select a Menu Item Type" in modal box in menu item edit page (Dennis Hermatski)
 # [#26278] Issue 26199 broke some javascript alerts

28-Jun-2011 Christophe Demko
 # [#25381] Banner Manager: Tracks - JavaScript error 'document.id("jform_inline0") is null' (Peter Chovancak)
 # [#25354] Edit icon does not work on 3rd party extensions (Nikolai Plath)
 # [#25498] Login error when user is not activated (Rune Sjøen)
 # [#25237] Credentials not added to response when authentication fails
 # [#26277] Extra line breaks in weblink item description (Dennis Hermatski)
 # [#26262] Remove more images from bluestork (Rouven Weßling)

27-Jun-2011 Mark Dexter
 ^ [#26088] Add WAI-ARIA and HTML5 support the progressbar.js (Rouven Weßling) 
 ^ [#26099] Make loadmodule plugin more useful (Elin Waring)
 # [#25696] Updating from J1.6.2 to J1.6.3 removes all files!

27-Jun-2011 Christophe Demko
 # [#26261] Fix some issues from 26260 (Rouven Weßling)

26-Jun-2011 Christophe Demko
 # [#26223] JMail::setSender do not set Sender (Alessandro Pasotti)
 # [#26155] Search results for contacts (Nikolai Plath)
 # [#26260] Add a little eye candy to the bluestork cpanel (Rouven Weßling)

25-Jun-2011 Christophe Demko
 # [#23893] My Profile issues
 # [#26252] Cache library does not generate valid index.html file
 # [#26238] Improvement of assigning modules (Dennis Hermatski)